--- a/index.html
+++ b/index.html
@@ -9,6 +9,87 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="container">
+      <div class="content">
+        <div class="left-side">
+          <div class="address details">
+            <i class="fa-solid fa-location-dot"></i>
+            <div class="topic">Адрес</div>
+            <div class="text-one">м. Івано-Франківськ</div>
+            <div class="text-two">вул. Симоненка 9а</div>
+          </div>
+          <div class="phone details">
+            <i class="fa-solid fa-phone"></i>
+            <div class="topic">Телефон</div>
+            <div class="text-one">+38-(068)-751-16-47</div>
+            <div class="text-two">+38-(068)-751-16-47</div>
+          </div>
+          <div class="email details">
+            <i class="fa-solid fa-envelope"></i>
+            <div class="topic">E-mail</div>
+            <div class="text-one">andrykuz4556@gmail.com</div>
+            <div class="text-two">andrykuz4556@gmail.com</div>
+          </div>
+        </div>
+        <div class="right-side">
+          <div class="topic-text">Відправте нам повідомлення</div>
+          <p>Якщо ви маєте пропозиції щодо співпраці заповніть форму нижче</p>
+          <form action="mail.php" method="POST" id="form" name="form">
+            <div class="input-box">
+              <input
+                type="text"
+                placeholder="Введіть ваше ім'я"
+                id="name"
+                name="name"
+                data-reg="^[А-ЯІЇЄ][а-яіїє]*$"
+              />
+              <label for="name">Наприклад: Андрій</label>
+            </div>
+            <div class="input-box">
+              <input
+                type="text"
+                placeholder="Введіть ваш email"
+                id="email"
+                name="email"
+                data-reg="^[-\w.]+@([A-z0-9][-A-z0-9]+\.)+[A-z]{2,4}$"
+              />
+              <label for="email">в форматі: admin@mail.com</label>
+            </div>
+            <div class="input-box">
+              <input
+                type="text"
+                placeholder="Введіть ваш телефон"
+                id="phone"
+                name="phone"
+                data-reg="^((\+38|)+([0-9]){10})$"
+              />
+              <label for="phone"
+                >В форматі: +380681234567 або 0681234567
+              </label>
+            </div>
+            <div class="input-box message-box">
+              <textarea
+                placeholder="Повідомлення"
+                required
+                name="message"
+              ></textarea>
+            </div>
+            <div class="button">
+              <input
+                type="submit"
+                value="Відправити"
+                id="button"
+                name="button"
+              />
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    <script
+      src="https://kit.fontawesome.com/1a5ed63f20.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="app.js"></script>
   </body>
 </html>
